message broker added and stablised the product and customer services

--- a/products/.env
+++ b/products/.env
@@ -4,4 +4,9 @@ APP_SECRET ='jg_youtube_tutorial'
 MONGODB_URI='mongodb+srv://admin:admin@cluster0.vrmsqcv.mongodb.net/product'
 
 # Port
+
+
 PORT=8001
+
+
+MESSAGE_BROKER_URL='amqp://localhost'
