--- a/customer/.env.dev
+++ b/customer/.env.dev
@@ -5,3 +5,5 @@ MONGODB_URI='mongodb+srv://admin:admin@cluster0.vrmsqcv.mongodb.net/customer'
 
 # Port
 PORT=8002
+
+MESSAGE_BROKER_URL='amqp://localhost'
